examples/test/testpolicy12626.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12626
  namespace: namespace406
spec:
  podSelector:
    matchLabels:
      key48: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value36
      podSelector:
        matchLabels:
          key16: value32
          key34: value48
          key1: value43
